k8s/12.5/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-deployment
  labels:
    app: mt
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mt
  template:
    metadata:
      labels:
        app: mt
    spec:
      containers:
      - name: mt
        image: praqma/network-multitool:alpine-extra
