k8s/12.5/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nginx
spec:
  selector:
    app: nginx
  ports:
    - name: nginx
      protocol: TCP
      port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mt
spec:
  selector:
    app: mt
  ports:
    - name: mt
      protocol: TCP
      port: 80
