k8s/12.5/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-mt-ingress
    annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: svc-nginx
            port:
              name: nginx
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-mt
            port:
              name: mt
